--- a/isbasvurusu.html
+++ b/isbasvurusu.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<body bgcolor=#grey></body>
+<body bgcolor=#474747></body>
 <title>İş Başvuru Formu</title>
 <h1>Rehber İş Başvurusu</h1>
 <h2>Genel Bilgiler</h2>
@@ -11,8 +11,12 @@
           <input type="text" name="Soyisim" />
           <br />
           Cinsiyet:<br />
+          <label>
             <input type="radio" name="cinsiyet" value="e" /> Erkek<br />
+          </label>
+          <label>
             <input type="radio" name="cinsiyet" value="k" /> Kadın<br />
+          </label>
           Doğum Tarihi <br />
           <input type="text"  name="Doğum Tarihi" />
           <br />
@@ -31,13 +35,27 @@
           <option value="İleri">Üniversite</option>
           </select> <br />
           Yabancı Dilleriniz:<br />
+          <label>
             <input type="radio" name="dil1" value="t" /> Türkçe<br />
+          </label>
+          <label>
             <input type="radio" name="dil2" value="i" /> İngilizce<br />
+          </label>
+          <label>
             <input type="radio" name="dil3" value="t" /> Fransızca<br />
+          </label>
+          <label>
             <input type="radio" name="dil4" value="t" /> Almanca<br />
+          </label>
+          <label>
             <input type="radio" name="dil5" value="t" /> Çince<br />
+          </label>
+          <label>
             <input type="radio" name="dil6" value="t" /> Japonca<br />
+          </label>
+          <label>
             <input type="radio" name="dil7" value="t" /> Arapça<br />
+          </label>
           </select> <br />
 <h3>İletişim Bilgileri</h3>        
           Telefon Numarası<br />
